--- a/css/style.css
+++ b/css/style.css
@@ -6526,6 +6526,9 @@ ul {
   object-fit: cover;
 }
 
+
+
+
 /* Responsive Design */
 @media (max-width: 768px) {
   .container4 {
@@ -6859,3 +6862,30 @@ ul {
     
   }
 }
+
+
+/*  */
+#adjust-btn{
+  position: absolute;
+  font-weight: 600;
+  bottom: 60px;
+  left: 27%;
+  transform: translateX(-50%);
+  padding: 15px 25px;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
+}
+
+#adjust-btn:hover{
+  background-color: black;
+  color: white;
+  border: 1.5px solid white;
+}
+
+
