--- a/css/style.css
+++ b/css/style.css
@@ -1434,6 +1434,27 @@ a {
   height: 100%;
 }
 
+/* .mil-frame {
+  padding: 10px;
+  padding-bottom: 50px;
+  position: fixed;
+  z-index: 999;
+  pointer-events: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 100%;
+  height: 5%;
+  background-color: white;
+} */
+
 @media screen and (max-width: 1200px) {
   .mil-frame {
     padding: 30px;
@@ -6888,4 +6909,126 @@ ul {
   border: 1.5px solid white;
 }
 
+/* new footer8 */
+.footer8 {
+  box-sizing: border-box;
 
+  margin: 0;  
+  color: black;
+  background-color: whitesmoke;
+  text-align: center;
+}
+.container8 {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container8 ul {
+  list-style: none;
+  margin: 1em 0;
+  padding-top: 9px;
+  margin-bottom: -3px;
+}
+.footer_adr {
+  color: black;
+  max-width: 25em;
+  font-size: 0.9em;
+  line-height: 23px;
+  margin: 1em auto;
+}
+.media-icons8 a {
+  font-size: 1.1em;
+  width: 2em;
+  height: 2em;
+  border: 1px solid #972221;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+  margin: 0 0.5em;
+}
+.media-icons8 a:hover {
+  background: #972221;
+  color: #fbae19;
+}
+.footer8 .menu8 a {
+  transition: 0.3s;
+  font-weight: 600;
+  color:#972221;
+}
+.footer8 .menu8 a:hover {
+  color: #fbae19;
+}
+
+.footer8 .menu8 li {
+  display: inline-block;
+  margin: 0 1em;
+  text-align: center;
+  
+}
+.footer8 .media-icons8 {
+  display: flex;
+  justify-content: center;
+  margin: 1.5em 0;
+}
+.footer_logo8{
+  height: auto;
+  width: 50%;
+}
+.footer_logo8 {
+  margin-bottom: 20px;
+}
+
+.img8 {
+  max-width: 50%;
+  height: auto;
+}
+/* Responsive Design */
+
+@media (max-width: 768px) {
+  .container8 {
+    padding: 1em;
+  }
+
+  .footer_logo8 {
+    width: 70%;
+  }
+
+  .img8 {
+    max-width: 70%;
+  }
+
+  .footer8 .menu8 li {
+    display: block;
+    margin: 0.5em 0;
+  }
+
+  .media-icons8 a {
+    margin: 0.5em;
+  }
+
+  .footer_adr {
+    font-size: 0.8em;
+    line-height: 1.5em;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer_logo8 {
+    width: 80%;
+  }
+
+  .img8 {
+    max-width: 80%;
+  }
+
+  .footer_adr {
+    font-size: 0.75em;
+    line-height: 1.4em;
+    max-width: 20em;
+  }
+}
