--- a/css/style.css
+++ b/css/style.css
@@ -2015,12 +2015,12 @@ a {
 }
 
 .mil-inner-banner .mil-banner-content {
-  padding: 100px 0 0 0;
+  /* padding: 100px 0 0 0; */
 }
 
 @media screen and (max-width: 1200px) {
   .mil-inner-banner .mil-banner-content {
-    padding: 180px 0 0 0;
+    /* padding: 180px 0 0 0; */
   }
 }
 
@@ -4993,7 +4993,7 @@ html.is-animating .mil-menu-frame {
 
 #play-pause-btn {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: none;
@@ -5132,6 +5132,9 @@ html.is-animating .mil-menu-frame {
 
 /* Media queries for responsiveness */
 @media screen and (max-width: 768px) {
+  #play-pause-btn{
+    top: 60%;
+  }
   .featured-works {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     /* Adjust to your needs */
@@ -6265,6 +6268,7 @@ ul {
 
 .gallery-img img {
   max-width: 100%;
+  /* padding: 20px; */
   vertical-align: middle;
   transition: transform 0.5s ease;
 }
@@ -6373,7 +6377,7 @@ ul {
 #caption {
   animation-name: zoom;
   animation-duration: 0.6s;
-  margin-top: 25vh;
+  margin-top: 16vh;
 }
 
 @keyframes zoom {
@@ -6422,6 +6426,14 @@ ul {
 
 /* Responsive Styles for Filter Buttons */
 @media(max-width: 767px) {
+  .gallery-img img{
+    padding: 20px;
+    border-radius: 5px;
+  }
+  
+  .modal-content{
+    margin-top: 32vh;
+  }
   .gallery-filter .filter-item {
     font-size: 14px;
     /* Reduce font size */
@@ -6456,10 +6468,9 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 30px;
   margin: 0;
-  padding: 30px;
   font-family: "Montserrat", sans-serif;
   background-color: whitesmoke;
 }
@@ -6556,6 +6567,9 @@ ul {
     flex-direction: column;
     height: auto;
   }
+  .consult4{
+    padding: 20px;
+  }
 
   .text-section4,
   .video-section4 {
@@ -6573,7 +6587,7 @@ ul {
   }
 
   .service-item4 {
-    font-size: 1.5rem;
+    font-size: 3.5rem;
   }
 
   .service-item4::after {
@@ -6591,11 +6605,11 @@ ul {
   }
 
   .service-item4 {
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
   }
 
   .service-item4::after {
-    font-size: 1.2rem;
+    font-size: 2.5rem;
   }
 
   .video4 {
@@ -6846,6 +6860,11 @@ ul {
 }
 
 @media (max-width: 768px) {
+  .Form-teaser {
+    padding: 20px;
+    margin-bottom: 30px;
+    }
+}
   .teaser-section {
     flex-direction: column;
     padding: 20px;
@@ -6915,8 +6934,9 @@ ul {
 
   margin: 0;  
   color: black;
-  background-color: whitesmoke;
+  background-color: white;
   text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.1)
 }
 .container8 {
   max-width: 1200px;
@@ -6925,6 +6945,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+
 }
 .container8 ul {
   list-style: none;
