animations added in home page

--- a/css/style.css
+++ b/css/style.css
@@ -1982,7 +1982,7 @@ a {
 }
 
 .mil-banner .container {
-  height: 100%;
+  min-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
