color correction done to seperate the website

--- a/css/style.css
+++ b/css/style.css
@@ -4946,7 +4946,12 @@ html.is-animating .mil-menu-frame {
 
 /* vertical video */
 
+.vertical-video{
+  background-color: whitesmoke;
+}
+
 .vertical-video-container {
+
   display: flex;
   align-items: center;
   justify-content: center;
