worked on the size of the navbar seciton

--- a/css/style.css
+++ b/css/style.css
@@ -4944,7 +4944,7 @@ html.is-animating .mil-menu-frame {
 /* vertical video */
 
 .vertical-video {
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 .vertical-video-container {
