--- a/css/contact.css
+++ b/css/contact.css
@@ -106,6 +106,10 @@ form>div {
   -webkit-transition: 0.2s ease all;
 }
 
+.image-container-ss{
+  position: relative;
+}
+
 .did-floating-input {
   font-size: 1.5rem;
   display: block;
