--- a/css/style.css
+++ b/css/style.css
@@ -7140,3 +7140,86 @@ p#copywright-p {
     align-items: center;
   }
 }
+
+
+/* Slider hero */
+
+
+.sid-hero-slider {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+
+  .sid-carousel-cell {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    .sid-inner {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+      color: white;
+      text-align: center;
+    }
+  }
+
+  /* Arrow Button Styling */
+  .flickity-prev-next-button {
+    width: 60px;
+    height: 60px;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    color: white;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10; /* Make sure the arrows are above other content */
+  }
+
+  .flickity-prev-next-button.previous {
+    left: 10px;
+  }
+
+  .flickity-prev-next-button.next {
+    right: 10px;
+  }
+
+  .flickity-page-dots {
+    bottom: 10px;
+  }
+
+  .flickity-page-dots .dot {
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background: black;
+    border-radius: 50%;
+  }
+
+  .flickity-page-dots .dot.is-selected {
+    background: rgb(255, 152, 0);
+  }
+}
+
+.flickity-button:hover {
+  background-color: rgb(255, 152, 0) !important;
+  color: #000 !important;
+}
+
+/* Default styling for desktop and larger screens */
+.sid-carousel-cell {
+  background-size: cover;
+  background-position: center;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 767px) {
+  .sid-carousel-cell {
+    background-size: cover; 
+    background-position: center; 
+  }
+}
