--- a/css/style.css
+++ b/css/style.css
@@ -1046,7 +1046,7 @@ a {
   }
 }
 
-.mil-mt-120{
+.mil-mt-120 {
   margin-top: 120px;
 }
 
@@ -1078,7 +1078,7 @@ a {
 }
 
 #partners-section {
-  padding: 4em 0;
+  padding: 2em 0;
 }
 
 @media screen and (max-width: 992px) {
@@ -2686,7 +2686,9 @@ a {
 }
 
 .mil-partner-frame img {
-  width: 100%;
+  width: 70%;
+  aspect-ratio: 1/1;
+  object-fit: contain;
 }
 
 /* -------------------------------------------
@@ -3323,7 +3325,7 @@ a {
   margin-bottom: 30px;
 }
 
-.mil-blog-card .mil-cover-frame img {
+.mil-blog-card .-frame img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -3686,8 +3688,8 @@ a {
   height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
-  -o-object-position: center;
-  object-position: center;
+  -o-object-position: top;
+  object-position: top;
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
 }
@@ -4000,7 +4002,8 @@ a {
   position: absolute;
 }
 
-.mil-plus,.mil-minus{
+.mil-plus,
+.mil-minus {
   color: white;
 }
 
@@ -6811,6 +6814,10 @@ ul {
   width: 50%;
 }
 
+.left-side video {
+  aspect-ratio: 1/1;
+}
+
 .Form-teaser {
   padding: 50px;
 }
@@ -7119,24 +7126,25 @@ p#copywright-p {
   }
 }
 
-@media screen and ( width < 992px) {
-  #meetOurTeam{
+@media screen and (width < 992px) {
+  #meetOurTeam {
     padding-top: 0;
   }
-  .container-2-boxes{
+
+  .container-2-boxes {
     flex-wrap: wrap;
   }
 
-  .custrow{
+  .custrow {
     padding-bottom: 25px;
   }
 
-  .mil-frame-top{
+  .mil-frame-top {
     margin: 0;
     background-color: white;
   }
 
-  #container-2{
+  #container-2 {
     align-items: center;
   }
 }
@@ -7177,7 +7185,8 @@ p#copywright-p {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 10; /* Make sure the arrows are above other content */
+    z-index: 10;
+    /* Make sure the arrows are above other content */
   }
 
   .flickity-prev-next-button.previous {
@@ -7219,7 +7228,7 @@ p#copywright-p {
 /* Media query for mobile devices */
 @media (max-width: 767px) {
   .sid-carousel-cell {
-    background-size: cover; 
-    background-position: center; 
+    background-size: cover;
+    background-position: center;
   }
 }
