home page completed

--- a/css/style.css
+++ b/css/style.css
@@ -3220,7 +3220,7 @@ a {
 
 
 .mil-revi-pagination .swiper-pagination-bullet .mil-custom-dot.mil-slide-5 {
-  background-image: url(../img/brand-logos/godiva.png);
+  background-image: url(../img/brand-logos/16.png);
 }
 
 .mil-revi-pagination .swiper-pagination-bullet .mil-custom-dot.mil-slide-4 {
@@ -3228,15 +3228,15 @@ a {
 }
 
 .mil-revi-pagination .swiper-pagination-bullet .mil-custom-dot.mil-slide-3 {
-  background-image: url(../img/brand-logos/plantaholic.png);
+  background-image: url(../img/brand-logos/18.png);
 }
 
 .mil-revi-pagination .swiper-pagination-bullet .mil-custom-dot.mil-slide-2 {
-  background-image: url(../img/brand-logos/talabat.png);
+  background-image: url(../img/brand-logos/17.png);
 }
 
 .mil-revi-pagination .swiper-pagination-bullet .mil-custom-dot.mil-slide-1 {
-  background-image: url(../img/brand-logos/alpro.png);
+  background-image: url(../img/brand-logos/15.png);
 }
 
 
